--- a/package.json
+++ b/package.json
@@ -99,39 +99,40 @@
   ],
   "author": "Minder Data Provider Team",
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/plugin-transform-class-static-block": "^7.28.3",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-query-devtools": "^5.59.20",
-    "axios": "^1.7.7",
-    "immer": "^10.1.1",
-    "react-redux": "^9.1.2",
-    "@testing-library/react": "^14.0.0",
     "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.0.0",
     "@types/cors": "^2.8.17",
-    "@babel/core": "^7.28.5",
-    "@babel/plugin-transform-class-static-block": "^7.28.3",
+    "@types/dompurify": "^3.0.5",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.73",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
+    "axios": "^1.7.7",
+    "dompurify": "^3.3.0",
     "eslint": "^8.57.0",
     "http-server": "^14.1.1",
+    "immer": "^10.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "react-redux": "^9.1.2",
     "ts-jest": "^29.1.2",
     "tsup": "^8.0.2",
     "typescript": "^5.4.3"
   },
   "peerDependencies": {
-    "react": ">=18.0.0",
-    "react-dom": ">=18.0.0",
-    "@tanstack/react-query": "^5.0.0",
     "@reduxjs/toolkit": "^2.0.0",
+    "@tanstack/react-query": "^5.0.0",
     "axios": "^1.0.0",
     "immer": "^10.0.0",
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0",
     "react-redux": "^9.0.0"
   },
   "jest": {
